--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ag-grid-enterprise": "^28.2.1",
     "ag-grid-react": "^28.2.1",
     "axios": "^1.2.1",
     "react": "^18.2.0",
